# jmtx

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  bicgstab_iteration.c  bicgstab_iteration.h  common.c  common.h  compare_crs_and_ccs.c  dense_matrix.c  dense_matrix.h  errors.c  errors.h  gauss_seidel_iteration.c  gauss_seidel_iteration.h  iter_test.c  jacobi_point_iteration.c  jacobi_point_iteration.h  matrix_base.h  requirements.txt  run_ccs_tests.c  run_crs_tests.c  sparse_column_compressed.c  sparse_column_compressed.h  sparse_row_compressed.c  sparse_row_compressed.h
doc/: conf.py  index.rst
source/: CMakeLists.txt  matrix_base.c  matrix_base.h  matrix_base_internal.h  solver_base.h
source/cdouble/: CMakeLists.txt
source/cdouble/decompositions/: band_lu_decomposition.c  dense_lu_decomposition.c  incomplete_cholesky_decomposition.c  incomplete_lu_decomposition.c
source/cdouble/matrices/: band_row_major.c  band_row_major_internal.h  basic_io.c  basic_io.h  dense_row_major.c  dense_row_major_internal.h  sparse_column_compressed.c  sparse_column_compressed_internal.h  sparse_conversion.c  sparse_diagonal_compressed.c  sparse_diagonal_compressed_internal.h  sparse_multiplication.c  sparse_row_compressed.c  sparse_row_compressed_internal.h
source/cdouble/solvers/: band_lu_decomposition.c  bicgstab_iteration.c  cholesky_solving.c  conjugate_gradient_iteration.c  gauss_seidel_iteration.c  generalized_minimum_residual_iteration.c  gmres_internal.h  incomplete_cholesky_decomposition.c  incomplete_lu_decomposition.c  jacobi_point_iteration.c  lu_solving.c  recursive_generalized_minimum_residual_iteration.c
source/cfloat/: CMakeLists.txt
source/cfloat/decompositions/: band_lu_decomposition.c  dense_lu_decomposition.c  incomplete_cholesky_decomposition.c  incomplete_lu_decomposition.c
source/cfloat/matrices/: band_row_major.c  band_row_major_internal.h  basic_io.c  basic_io.h  dense_row_major.c  dense_row_major_internal.h  sparse_column_compressed.c  sparse_column_compressed_internal.h  sparse_conversion.c  sparse_diagonal_compressed.c  sparse_diagonal_compressed_internal.h  sparse_multiplication.c  sparse_row_compressed.c  sparse_row_compressed_internal.h
source/cfloat/solvers/: band_lu_decomposition.c  bicgstab_iteration.c  cholesky_solving.c  conjugate_gradient_iteration.c  gauss_seidel_iteration.c  generalized_minimum_residual_iteration.c  gmres_internal.h  incomplete_cholesky_decomposition.c  incomplete_lu_decomposition.c  jacobi_point_iteration.c  lu_solving.c  recursive_generalized_minimum_residual_iteration.c
source/conversion/: CMakeLists.txt  brm_conversion.c  brm_conversion.h  ccs_conversion.c  ccs_conversion.h  cds_conversion.c  cds_conversion.h  crs_conversion.c  crs_conversion.h
source/decompositions/: band_lu_decomposition.c  band_lu_decomposition.h  dense_lu_decomposition.c  dense_lu_decomposition.h  incomplete_cholesky_decomposition.c  incomplete_cholesky_decomposition.h  incomplete_lu_decomposition.c  incomplete_lu_decomposition.h
source/double/: CMakeLists.txt
source/f_exper/: f_crs_base.f90  f_interface.h  fjacobi.f90
source/float/: CMakeLists.txt
source/matrices/: band_row_major.c  band_row_major.h  band_row_major_internal.h  basic_io.c  basic_io.h  dense_col_major.c  dense_col_major.h  dense_matrix.c  dense_matrix.h  dense_row_major.c  dense_row_major.h  matrix_base.c  matrix_base.h  matrix_base_internal.h  sparse_column_compressed.c  sparse_column_compressed.h  sparse_column_compressed_internal.h  sparse_column_compressed_safe.h  sparse_conversion.c  sparse_conversion.h  sparse_diagonal_compressed.c  sparse_diagonal_compressed.h  sparse_diagonal_compressed_internal.h  sparse_diagonal_compressed_safe.h  sparse_multiplication.c  sparse_multiplication.h  sparse_row_compressed.c  sparse_row_compressed.h  sparse_row_compressed_internal.h  sparse_row_compressed_safe.h
source/modules/: cdouble_module.c  cfloat_module.c  conversion_module.c  double_module.c  float_module.c  int_module.c  jmtx_cdouble_defines.h  jmtx_cfloat_defines.h  jmtx_clear_defines.h  jmtx_double_defines.h  jmtx_float_defines.h  jmtx_int_defines.h  jmtx_integer_defines.h
source/solvers/: band_lu_decomposition.c  band_lu_decomposition.h  bicgstab_iteration.c  bicgstab_iteration.h  cholesky_solving.c  cholesky_solving.h  conjugate_gradient_iteration.c  conjugate_gradient_iteration.h  gauss_seidel_iteration.c  gauss_seidel_iteration.h  generalized_minimum_residual_iteration.c  generalized_minimum_residual_iteration.h  gmres_internal.h  incomplete_cholesky_decomposition.c  incomplete_lu_decomposition.c  incomplete_lu_decomposition.h  jacobi_point_iteration.c  jacobi_point_iteration.h  lu_solving.c  lu_solving.h  recursive_generalized_minimum_residual_iteration.c  recursive_generalized_minimum_residual_iteration.h
tests/: CMakeLists.txt  base_ccs_test.c  base_crs_test.c  crs_addition_test.c  fjacobi_test.c  ftest_multiply.c  jacobi_test.c  omp_gauss_test.c  omp_jacobi_test.c  test_common.c  test_common.h
tests/cdouble/: test_common.c  test_common.h
tests/cfloat/: test_common.c  test_common.h
tests/converison/: float_to_double_conversion_test.c
tests/double/: test_common.c  test_common.h
tests/float/: test_common.c  test_common.h
tests/fortran_tests/: fjacobi_test.c  ftest_multiply.c
tests/matrix_ops_tests/: base_brm_test.c  base_ccs_test.c  base_cds_test.c  base_crs_test.c  base_drm_test.c  crs_addition_test.c  drm_givens_rotations.c  io_test.c  lu_solve_test.c  lu_solve_test_brm.c  omp_build_test.c
tests/really_old_tests/: compare_crs_and_ccs.c  iter_test.c  run_ccs_tests.c  run_crs_tests.c
tests/solver_tests/: bicgstab_cds_test.c  bicgstab_crs_test.c  brm_decompose_test.c  brm_lu_improvement_test.c  cg_cds_test.c  drm_decompose_test.c  gauss_test.c  gmres_cds_test.c  gmres_test.c  gmresr_cds_test.c  icpcg_test.c  ilu_test.c  incho_cds_test.c  incho_test.c  inclu_test.c  jacobi_test.c  lu_solve_test.c  lu_solve_test_brm.c  omp_cg_test.c  omp_gauss_test.c  omp_inclu_test.c  omp_jacobi_test.c  parallel_bicgstab_crs.c
(+340 files in other folders)
